<resources>
    <string name="app_name">BillApp</string>
    <string name="please_choose_to_login_register">Please choose to login/Register</string>
    <string name="create_account">Create Account</string>
    <string name="please_enter_your_email_address">Please Enter Your Email Address</string>
    <string name="please_enter_your_password">Please Enter Your Password</string>
    <string name="register">Register</string>
    <string name="easy_bills">EASY BILLS</string>
    <string name="take_a_photo_of_your_bill">Take a photo of your bill</string>
    <string name="my_bills">My Bills</string>
    <string name="user_profile">User Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="email_address">Email Address</string>
    <string name="age">Age</string>
    <string name="amount_due">Amount Due:</string>
    <string name="my_notes">My Notes</string>
    <string name="welcome">Welcome</string>
</resources>
